# Slash-Sure

./: .gitignore  README.md  docker-compose.yml  vercel.json
.claude/: launch.json
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_is_superadmin.py  003_fix_users_columns.py  004_recreate_all_tables.py  005_fix_all_table_schemas.py  006_wallet_master_encryption.py  007_operator_contract_scoping.py
backend/app/: main.py
backend/app/api/v1/routes/: admin.py  auth.py  genlayer.py  incidents.py  insurance.py  monitoring.py  operators.py  risk.py  slashing.py
backend/app/api/v1/ws/: events.py
backend/app/core/: config.py  redis.py  security.py
backend/app/db/: base.py
backend/app/middleware/: audit.py
backend/app/models/: __init__.py  audit.py  incident.py  insurance.py  monitoring.py  operator.py  reputation.py  slashing.py  user.py  wallet.py
backend/app/schemas/: auth.py
backend/app/services/genlayer/: client.py  signer.py
backend/app/services/notifications/: email.py
backend/app/workers/: monitoring_worker.py
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/ui/: Logo.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/store/: auth.ts
frontend/src/styles/: globals.css
infrastructure/docker/: init.sql
infrastructure/fly/: fly.toml
intelligent-contracts/: slash_sure.py
(+24 files in other folders)
