[tool.poetry]
name = "slashsure-backend"
version = "1.0.0"
description = "SlashSure Backend API — AI-powered slashing monitoring and insurance layer"
authors = ["SlashSure Team"]
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
alembic = "^1.13.1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
redis = {extras = ["hiredis"], version = "^5.0.4"}
httpx = "^0.27.0"
websockets = "^12.0"
eth-account = "^0.11.0"
web3 = "^6.18.0"
cryptography = "^42.0.7"
slowapi = "^0.1.9"
loguru = "^0.7.2"
tenacity = "^8.3.0"
aiohttp = "^3.9.5"
python-dotenv = "^1.0.1"
genlayer-py = "*"
email-validator = "^2.1.1"
slack-sdk = "^3.27.2"

[tool.poetry.dev-dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
httpx = "^0.27.0"
ruff = "^0.4.4"
mypy = "^1.10.0"
factory-boy = "^3.3.0"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
